--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -53,7 +53,7 @@
     {% endif %}
     
    {% if post.paperurl %}
-    <p><a href="{{ post.paperurl }}">Download Paper</a></p>
+    <p><a href="{{ post.paperurl }}">PubMed Link</a></p>
   {% endif %}
 
   </article>
