--- a/_includes/cv-template.html
+++ b/_includes/cv-template.html
@@ -133,7 +133,7 @@
   {% if cv.publications.size > 1000 %}
   <!-- Publications -->
   <div class="cv-section">
-    <h2>Publications</h2>
+    <h2>Publicationsss</h2>
     <ul class="cv-list">
       {% for publication in cv.publications %}
       <li class="cv-item">
